Bug 1263288 - Make GetFrameForNodeOffset return a sibling frame for frameless content. r=mats

This fixes missing caret problems.

Also changed GetFrameForNodeOffset to be non recursive to prevent possibly of
large stack frame.